--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,116 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+
+}
+
+.jukebox {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-image: url(./components/jukebox.jpg);
+  background-size: 100%;
+}
+
+.catalog {
+ width: 70%;
+ height: 65%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ background-color: rgb(248, 241, 230);
+ border: 2px solid black;
+ border-radius: 10px;
+}
+
+.song {
+  width: 300px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #C0C4C8;
+  border: 1px solid black;
+  border-radius: 15px;
+  box-shadow: 0px 0px 5px 0px rgb(158, 158, 158);
+  overflow: hidden;
+}
+
+.song-info {
+  padding: 5px;
+}
+
+.song-text {
+  margin: 0;
+  font-weight: bold;
+}
+.button-menu {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 75px;
+  width: 15%;
+  background-color: #9E6FC6;
+  border-left: 1px solid black;
+}
+
+.song-buttons {
+ background-color: #6EBABA;
+ border: 1px solid black;
+ border-radius: 5px;
+ font-weight: bold;
+ box-shadow: 0px 0px 5px 0px rgb(65, 65, 65);
+}
+
+.header {
+  width: 25%;
+  height: 100%;
+  background-color: #C0C4C8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 2px solid black;
+}
+
+.logo {
+  width: 80%;
+  height: auto;
+}
+
+.form {
+  width: 60%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+  border: 2px solid black;
+  background-color: #9E6FC6;
+  box-shadow: 0px 0px 15px 1px rgb(116, 116, 116);
+  border-radius: 10px;
+}
+
+.input {
+  width: 90%;
+  height: auto;
+  margin: 10px;
+  border: 2px solid black;
+}
+
+.form-button {
+  width: 50%;
+  height: 40px;
+  border: 2px solid black;
+  border-radius: 15% / 50%;
+  background-color: #6EBABA;
+}
+
