--- a/src/index.css
+++ b/src/index.css
@@ -41,10 +41,10 @@ code {
 }
 
 .song {
+  padding: 0;
   width: 300px;
-  height: auto;
+  height: 10%, auto;
   display: flex;
-  align-items: center;
   justify-content: space-between;
   background-color: #C0C4C8;
   border: 1px solid black;
@@ -63,14 +63,16 @@ code {
 }
 .button-menu {
   margin: 0;
+  padding: 0;
+  height: auto;
+  width: 15%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 75px;
-  width: 15%;
   background-color: #9E6FC6;
   border-left: 1px solid black;
+  
 }
 
 .song-buttons {
