--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Alfa Slab One', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -32,34 +30,39 @@ code {
 .catalog {
  width: 70%;
  height: 65%;
- display: flex;
- flex-direction: column;
- align-items: center;
  background-color: rgb(248, 241, 230);
  border: 2px solid black;
  border-radius: 10px;
+ overflow-y: scroll;
 }
 
 .song {
+  margin: 4px, auto;
   padding: 0;
-  width: 300px;
-  height: 10%, auto;
+  position: relative;
+  left: 35%;
+  right: 35%;
+  width: 30%;
+  height: 12%;
   display: flex;
   justify-content: space-between;
   background-color: #C0C4C8;
-  border: 1px solid black;
   border-radius: 15px;
-  box-shadow: 0px 0px 5px 0px rgb(158, 158, 158);
+  border: 1px solid rgb(202, 199, 191);
+  box-shadow: 0px 0px 5px 0px  rgb(187, 184, 181);
   overflow: hidden;
 }
 
 .song-info {
-  padding: 5px;
+  padding: 0px;
+  width: 85%;
 }
 
 .song-text {
-  margin: 0;
-  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  font-size: 17px;
+  font-weight: 50;
 }
 .button-menu {
   margin: 0;
@@ -70,17 +73,37 @@ code {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  border-left: 1PX solid #8c9094;
   background-color: #9E6FC6;
-  border-left: 1px solid black;
   
+}
+
+.edit-menu {
+  display: flex;
+  justify-content: space-evenly;
+  height: 30%;
+}
+
+.edit-input {
+  height: 75%%;
+}
+
+.update-button {
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 0px 5px 0px #a1a4a8;
+  border-radius: 5px;
+  background-color: #6EBABA;
+  border: 0px;
 }
 
 .song-buttons {
  background-color: #6EBABA;
- border: 1px solid black;
+ border: 0px solid black;
  border-radius: 5px;
- font-weight: bold;
- box-shadow: 0px 0px 5px 0px rgb(65, 65, 65);
+ font-size: 15px;
+ font-weight: 1000;
+ box-shadow: 0px 0px 5px 0px #6b4c88;
 }
 
 .header {
@@ -105,7 +128,6 @@ code {
   flex-direction: column;
   align-items: center;
   padding: 5%;
-  border: 2px solid black;
   background-color: #9E6FC6;
   box-shadow: 0px 0px 15px 1px rgb(116, 116, 116);
   border-radius: 10px;
@@ -115,14 +137,15 @@ code {
   width: 90%;
   height: auto;
   margin: 10px;
-  border: 2px solid black;
+  border: 1px solid black;
 }
 
 .form-button {
   width: 50%;
   height: 40px;
-  border: 2px solid black;
+  border: 1px solid #7e59a0;
   border-radius: 15% / 50%;
   background-color: #6EBABA;
+  box-shadow: 0px 0px 5px 0px #6b4c88;
 }
 
