--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,14 @@ code {
 
 .catalog {
  width: 70%;
- height: 65%;
- background-color: rgb(248, 241, 230);
- border: 2px solid black;
- border-radius: 10px;
+ height: 64%;
+ background-color: #d5d8db;
+ border: 0px solid black;
  overflow-y: scroll;
 }
 
 .song {
-  margin: 4px, auto;
+  margin: 10px;
   padding: 0;
   position: relative;
   left: 35%;
@@ -48,8 +47,8 @@ code {
   justify-content: space-between;
   background-color: #C0C4C8;
   border-radius: 15px;
-  border: 1px solid rgb(202, 199, 191);
-  box-shadow: 0px 0px 5px 0px  rgb(187, 184, 181);
+  border: 0px solid #797b7e;
+  box-shadow: 0px 0px 5px 0px  #797b7e;
   overflow: hidden;
 }
 
@@ -62,7 +61,7 @@ code {
   margin: 0px;
   padding: 0px;
   font-size: 17px;
-  font-weight: 50;
+  font-weight: 200;
 }
 .button-menu {
   margin: 0;
@@ -85,7 +84,7 @@ code {
 }
 
 .edit-input {
-  height: 75%%;
+  height: 75%;
 }
 
 .update-button {
@@ -113,7 +112,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-right: 2px solid black;
+  border-right: 1px solid black;
 }
 
 .logo {
@@ -129,7 +128,7 @@ code {
   align-items: center;
   padding: 5%;
   background-color: #9E6FC6;
-  box-shadow: 0px 0px 15px 1px rgb(116, 116, 116);
+  box-shadow: 0px 0px 15px 1px rgb(165, 165, 165);
   border-radius: 10px;
 }
 
